# russol-alpha

./: .gitignore  .gitmodules  Cargo.toml  README.md  rust-toolchain.toml
ruslic/: Cargo.toml
ruslic/src/: cargo.rs  constant.rs  contract_translator.rs  fnsig_regions.rs  hir_translator.rs  interner.rs  lib.rs  main.rs  ruslik_pure.rs  ruslik_pure_helpers.rs  ruslik_ssl.rs  ruslik_types.rs  src_replace.rs  subst_generics.rs  suslik.rs  suslik_normalize.rs  suslik_translate.rs  trait_bounds.rs
ruslic/tests/: ci-expected-full.txt  ci-expected.txt  ci-results-old.txt  ci-results.txt  ci.rs  compiled_tests.creusot  compiled_tests.mlcfg  compiled_tests.rs  crates-expected-full.txt  crates-expected.txt  crates-results.txt  top_crates.rs
ruslic/tests/all/: creusot-expected.mlcfg  creusot_expected.mlcfg
ruslic/tmp/: base64-0.21.0.crate  chrono-0.4.24.crate  crossbeam-epoch-0.9.14.crate  digest-0.10.6.crate  futures-0.3.28.crate  futures-channel-0.3.28.crate  futures-sink-0.3.28.crate  futures-task-0.3.28.crate  futures-util-0.3.28.crate  getrandom-0.2.8.crate  http-0.2.9.crate  hyper-0.14.25.crate  itoa-1.0.6.crate  libc-0.2.140.crate  lock_api-0.4.9.crate  matches-0.1.10.crate  memoffset-0.8.0.crate  miniz_oxide-0.7.1.crate  parking_lot_core-0.9.7.crate  proc-macro2-1.0.54.crate  quote-1.0.26.crate  semver-1.0.17.crate  serde-1.0.159.crate  serde_derive-1.0.159.crate  serde_json-1.0.95.crate  slab-0.4.8.crate  smallvec-1.10.0.crate  socket2-0.5.1.crate  syn-2.0.12.crate  termcolor-1.2.0.crate  thiserror-1.0.40.crate  tracing-0.1.37.crate  tracing-core-0.1.30.crate
(+103 files in other folders)
