[package]
name = "ruslic"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ruslic"
path = "src/main.rs"

[[bin]]
name = "cargo-russol"
path = "src/cargo.rs"

[dependencies]
itertools = "0.10.3"
wait-timeout = "^0.2.0"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
toml = "0.5"
rand = "0.8"

[dev-dependencies]
walkdir = "2.3.2"

reqwest = { version = "^0.11", features = ["blocking"] }
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"

[package.metadata.rust-analyzer]
rustc_private=true 
